--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -423,6 +423,13 @@ body {
 
 
 @media screen and (min-width:768px){
+
+
+    html{
+        font-size: 18px;
+        
+    }
+
     .btnCheckbox img{
         display: none;
         transition: .5s ease-in-out;
@@ -443,10 +450,12 @@ body {
 
     .header>div:nth-child(1){
         grid-column: 2/3;
+        font-size: 100px;
     }
 
     .header>div:nth-child(2){
         grid-column: 2/3;
+        font-size: 100px;
     }
 
     .header>div:nth-child(3){
@@ -458,11 +467,15 @@ body {
         grid-row: 1/7;
     }
 
+    .img-profile{
+        background-repeat: no-repeat; 
+        background-position: center; 
+    }
+
 
     .img-profile img{
         height: 300px;
-        width:300px;
-        
+        width:300px; 
     }
 
     .experience-content{
